--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,2 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~normalize.css';
+
+* {
+  font-size: 13pt;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+pre {
+  word-spacing: 1px;
+  letter-spacing: 1px;
+}
