--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,9 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~normalize.css';
 
-* {
+html {
   font-size: 13pt;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 pre {
