--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,7 +3,9 @@
 
 html {
   font-size: 13pt;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  font-weight: normal;
+  font-style: normal;
   overflow-x: hidden;
   overflow-y: scroll;
 }
