--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,12 +4,8 @@
 html {
   font-size: 13pt;
   font-family: 'Open Sans', serif;
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
-
-  -webkit-font-smoothing: none;
-  font-smoothing: none;
-
   overflow-x: hidden;
   overflow-y: scroll;
 }
