Few test frontend implementations

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,8 @@
 <span>{{ title }} app is running!</span>
+
+<br />
+<a routerLink="/person/list" class="btn btn-info">List Persons</a>
+
+<br />
+
+<router-outlet></router-outlet>
