--- a/frontend/src/app/person/person-list/person-list.component.html
+++ b/frontend/src/app/person/person-list/person-list.component.html
@@ -1,20 +1,23 @@
-<div class="card my-5">
-  <div class="card-body">
-    <table class="table table-bordered table-striped">
-      <thead class="thead-dark">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First Name</th>
-        <th scope="col">Last Name</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let person of persons">
-        <td>{{ person.id }}</td>
-        <td>{{ person.firstName }}</td>
-        <td>{{ person.lastName }}</td>
-      </tr>
-      </tbody>
+<div>
+    <table>
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let person of persons">
+            <td>{{ person.id }}</td>
+            <td>{{ person.firstName }}</td>
+            <td>{{ person.lastName }}</td>
+            <td>
+                <a [routerLink]="['/person/edit', person.id]"><i class="fa fa-edit"></i></a>
+                <a [routerLink]="" (click)="deletePerson(person.id)"><i class="fa fa-trash"></i></a>
+            </td>
+        </tr>
+        </tbody>
     </table>
-  </div>
 </div>
