--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,6 @@
-@import '../node_modules/font-awesome/css/font-awesome.css';
+$ionicons-font-path: "~ionicons/dist/fonts";
+@import "~ionicons/dist/scss/ionicons.scss";
+
 @import '~@angular/material/theming';
 
 $custom-typography: mat-typography-config($font-family: '"Open Sans", serif;');
@@ -24,7 +26,7 @@ html, body, * {
     word-spacing: 1px;
 }
 
-a .fa {
+.icon {
     color: black;
 }
 
