--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,19 +1,22 @@
 :host {
-  display: grid;
-  height: 100%;
-  grid-template-columns: 300px 1fr;
-  grid-template-rows: 80px 1fr;
+    display: grid;
+    height: 100%;
+    grid-template-rows: 80px 1fr;
 }
 
 app-header {
-  grid-area: 1 / 1 / 1 / 2;
+    grid-area: 1 / 1 / 2 / 2;
+    padding: 20px 0 0 20px;
+}
+
+mat-sidenav-container {
+    grid-area: 2 / 1 / 3 / 2;
 }
 
 app-navigation {
-  grid-area: 2 / 1 / 3/ 1;
+    padding: 20px;
 }
 
 .content {
-  grid-area: 2 / 2 / 2 /2;
-    padding-right: 100px;
+    padding-left: 20px;
 }
