--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -1,2 +1,3 @@
-<a routerLink="/person/list" class="btn btn-info">List Persons</a>
-<a routerLink="/person/create" class="btn btn-info">Create a new person</a>
+<a routerLink="/">Home</a>
+<a routerLink="/person/list">List Persons</a>
+<a routerLink="/person/create">Create a new person</a>
