--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,2 +1,2 @@
-<button (click)="burgerButtonPressed.emit()">Burger button</button>
+<button (click)="burgerButtonPressed()">Burger button</button>
 Person Example
